FEATURE: migrate UsersController
